# rp2040zero

./: README.md
python/: README.md  morse_kate.py
python/morse_kate/: README.md  morse_kate.py
rust/morse_kate/: .gitignore  Cargo.toml  README.md
rust/morse_kate/.cargo/: config.toml
rust/morse_kate/src/: main.rs
